Adding Phil content

--- a/api-design/filtering-responses.mdx
+++ b/api-design/filtering-responses.mdx
@@ -43,7 +43,7 @@ GET /products?category=books&status=available
 ```
 
 In these examples, the query parameter `category` or `status` is used to remove
-any products that don't match those exact values. 
+any products that don't match those exact values.
 
 The query parameters in some APIs might be a little busy, as there could be not
 just sorting and pagination, but people do things changing output structures,
@@ -61,7 +61,7 @@ This makes it clear that these are filtering parameters, keeping it separate fro
 pagination, sorting, or any response modifiers which may be present.
 
 Sometimes, users want to combine multiple filters. This is generally done by
-adding more parameters to the URL: 
+adding more parameters to the URL:
 
 ```bash
 GET /orders?filter[status]=shipped&filter[customer_id]=123
@@ -133,14 +133,14 @@ GET /products?$filter=category eq 'books' and price lt 50
 
 Here, `$filter` is the standard keyword for filtering, and `eq` is used for
 equality, while `lt` means less than. You can combine multiple filters using
-`and`, just like in the example above. 
+`and`, just like in the example above.
 
 FIQL is a compact, text-based query language used for filtering. It uses
 operators such as `==` for equality, `!=` for not equal, `<` and `>` for less
 than and greater than, and `;` for AND logic. For example, a FIQL filter might
 look like this:
 
-```bash 
+```bash
 GET /products?filter=category==books;price<20
 ```
 
@@ -165,9 +165,9 @@ instead of solving genuine problems for users.
 
 ## What is Sorting?
 
-What order to return resources in a collection? 
+What order to return resources in a collection?
 
-- Oldest first or newest first? 
+- Oldest first or newest first?
 - Alphabetical based on the name?
 - Highest price to lowest price?
 
@@ -175,7 +175,7 @@ Whichever is picked at first may be a sensible default, but it's likely that use
 will want to change this.
 
 For APIs, sorting is the process of arranging resources in a specific order
-based on user inputs. 
+based on user inputs.
 
 ## How to Sort
 
@@ -194,7 +194,7 @@ GET /products?sort=price&order=desc
 ```
 
 Here if we just had `sort=price` it would be reasonable to assume the client
-wanted the cheapest results, but if we're looking for the most expensive 
+wanted the cheapest results, but if we're looking for the most expensive
 products, we can add `order=desc` to return the most expensive first.
 
 This convention is very closely related to the SQL `ORDER BY` clause, which
@@ -227,7 +227,7 @@ _Learn more about [error handling in REST APIs](/api-design/errors)._
 
 The more that clients are allowed to customize their requests, the harder it
 becomes to set up caching rules and optimize database queries that might be
-produced. 
+produced.
 
 Anyone using an SQL database will know that the more complex the query, the
 harder it is to optimize. If clients are allowed to send in completely arbitrary
@@ -239,18 +239,18 @@ maintaining public APIs where an API could be brought down by a single user
 launching a new product.
 
 Rate limiting can help, but it's worth questioning: what is the purpose of this
-API? 
+API?
 
-Generally an API is not meant to be a database-over-HTTP, so if it feel like it
-is starting to recreate SQL or some other query language, it might be going down
-the wrong path. There are databases which can be used over HTTP that do not
-require creation of a database, like FaunaDB, Firebase, or DynamoDB, which might
-be a better fit.
+Generally an API is not meant to be a database-over-HTTP, so if the API design
+feels like it is starting to recreate SQL or some other query language, it might
+be going down the wrong path. There are databases which can be used over HTTP
+that do not require creation of a database, like FaunaDB, Firebase, or DynamoDB,
+which might be a better fit.
 
 ### URL Design
 
 Sometimes a filter could or should have been a different endpoint, a different
-parameter, or a different way of structuring the data. 
+parameter, or a different way of structuring the data.
 
 If the clients have asked for the ability to show off some "Hot Bargains",
 instead of telling clients to pick numbers based on price with `GET
@@ -259,7 +259,7 @@ everyone by creating `GET /products/bargains`.
 
 Cachability is improved, because you can set a 24 hour [network
 cache](/api-design/caching) on that
-which will be shared by all clients. 
+which will be shared by all clients.
 
 Consistency is improved, because the web and iOS versions of the same
 application aren't going to pick slightly different numbers for what is
@@ -271,7 +271,7 @@ Filtering is a powerful tool for API designers, allowing users to request only
 the data they need. By using query parameters, operators, and standard query
 languages, you can create a flexible and intuitive filtering system that meets
 the needs of your users, without going overboard and confusing everyone or
-making the API wildlife inefficient and unstable. 
+making the API wildlife inefficient and unstable.
 
 When in doubt, start simple, and add things later. It's always easier to add new
 parameters, endpoints, and additional ways of doing things, than it is to take
