Reshape MCP Hub layout

--- a/mcp/index.mdx
+++ b/mcp/index.mdx
@@ -4,9 +4,42 @@ description: Learn how Model Context Protocol (MCP) lets your agents or clients 
 ---
 
 import { CardGrid } from "@/components/card-grid";
+import { Card } from "@/components/card";
 import { mcpCards } from "@/lib/data/mcp";
 
+# Model Context Protocol (MCP) Hub
+
+Welcome to the Model Context Protocol hub. This collection of resources helps you understand and implement MCP to connect your AI agents to real-world tools and data.
+
+## MCP Fundamentals
+
+Start with these foundational concepts to understand the core components of Model Context Protocol.
+
 <CardGrid
-  heading="Model Context Protocol (MCP)"
-  cards={mcpCards}
+  cards={[
+    mcpCards[0], // What is MCP?
+    mcpCards[1], // MCP Tools
+    mcpCards[3], // MCP Prompts
+    mcpCards[2], // MCP Resources
+    mcpCards[4], // MCP Roots
+    mcpCards[5], // MCP Transports
+    {
+      title: "MCP Sampling",
+      description: "Techniques for effective sampling in MCP",
+      href: "/mcp/sampling",
+      variant: "basic",
+      icon: "microscope"
+    },
+  ]}
+/>
+
+## AI Agents & Implementation
+
+Learn how to build AI agents with MCP and see real-world examples of MCP in action.
+
+<CardGrid
+  cards={[
+    mcpCards[6], // Building AI Agents
+    mcpCards[7], // Real-world MCP Example
+  ]}
 />
