--- a/mcp/intro.mdx
+++ b/mcp/intro.mdx
@@ -145,6 +145,14 @@ MCP offers SDKs in multiple languages (including Python and JavaScript) to simpl
 
 <Spotlight>
 
+## !!steps overview
+
+Here is an example of an MCP server in Python that exposes a single tool to write notes to a local directory:
+
+```python ! mcp-server.py
+!from ./assets/intro/mcp.py.txt
+```
+
 ## !!steps tools
 
 A tool is a function exposed by the server that an AI agent can call using `JSON-RPC`. Each tool includes its name, input parameters, output schema, and a description.
@@ -182,14 +190,6 @@ Roots are a set of scoped access boundaries provided by the client at handshake.
 A transport defines the communication method the server uses to handle client connections. MCP supports multiple transports, including `stdio` for local execution and `http` for web-based deployment.
 
 ```python ! mcp-server.py focus=40:53
-!from ./assets/intro/mcp.py.txt
-```
-
-## !!steps complete-example
-
-Here is a complete example of an MCP server in Python that exposes tools, resources, prompts, and root capabilities.
-
-```python ! mcp-server.py
 !from ./assets/intro/mcp.py.txt
 ```
 
