Fix up mcp and openapi homepages

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -16,9 +16,10 @@ import InkeepSearchBar from "@/lib/inkeep/search";
       {intro?.description && <Text className="mb-10">{intro.description}</Text>}
       <div className="my-10">
       <InkeepSearchBar />
+      <CardGrid cards={cards?.quickstart} columns={2} />
       </div>
-      <CardGrid cards={cards?.start} />
-      <CardGrid cards={cards?.quickstart} columns={2} heading="Start" />
+      <CardGrid cards={cards?.start}
+      heading="Products" />
       <CardGrid columns={2} cards={cards?.learn} heading="Learn" />
       <CardGrid cards={cards?.resources} heading="Resources" />
       <CardGrid columns={2} cards={cards?.support} heading="Support" />
