--- a/mcp/index.mdx
+++ b/mcp/index.mdx
@@ -6,6 +6,26 @@ description: Learn how Model Context Protocol (MCP) lets your agents or clients 
 import { CardGrid } from "@/components/card-grid";
 import { Card } from "@/components/card";
 import { mcpCards } from "@/lib/data/mcp";
+import { Callout } from "@/mdx/components";
+
+<Callout type="info" title="This content is Open Source, contribute here!" className="overflow-hidden">
+  <div className="mx-auto max-w-full">
+    <Card
+      variant="github-repo"
+      repoPath="speakeasy-api/developer-docs"
+      title="Developer Documentation"
+      description="The official repository for Speakeasy's developer documentation"
+      href="https://github.com/speakeasy-api/developer-docs/tree/main"
+      button={{
+        label: "View on GitHub",
+        href: "https://github.com/speakeasy-api/developer-docs/tree/main",
+        variant: "secondary",
+        newTab: true
+      }}
+      className="max-w-full"
+    />
+  </div>
+</Callout>
 
 # Model Context Protocol (MCP) Hub
 
