--- a/openapi/index.mdx
+++ b/openapi/index.mdx
@@ -6,10 +6,33 @@ description: Documentation of the OpenAPI Specification
 import { Callout, Spotlight } from "@/mdx/components";
 import { CardGrid } from "@/components/card-grid";
 import { allFrameworkGuidesData } from "@/lib/data/openapi/framework-all-guides";
+import { Card } from "@/components/card";
+import InkeepSearchBar from "@/lib/inkeep/search";
 
-# OpenAPI Hub
+<Callout type="info" title="This content is Open Source, contribute here!" className="overflow-hidden">
+  <div className="mx-auto max-w-full">
+    <Card
+      variant="github-repo"
+      repoPath="speakeasy-api/developer-docs"
+      title="Developer Documentation"
+      description="The official repository for Speakeasy's developer documentation"
+      href="https://github.com/speakeasy-api/developer-docs/tree/main"
+      button={{
+        label: "View on GitHub",
+        href: "https://github.com/speakeasy-api/developer-docs/tree/main",
+        variant: "secondary",
+        newTab: true
+      }}
+      className="max-w-full"
+    />
+  </div>
+</Callout>
 
-The all in one resource for understanding the OpenAPI Specification.
+<div className="mb-8">
+  <h1 className="text-4xl font-bold mb-0">OpenAPI Hub</h1>
+  <p>The all in one resource for understanding the OpenAPI Specification.</p>
+  <InkeepSearchBar />
+</div>
 
 ## OpenAPI Overview
 
