chore: remove gh card temporarily * chore: add page header component

--- a/mcp/index.mdx
+++ b/mcp/index.mdx
@@ -4,28 +4,7 @@ description: Learn how Model Context Protocol (MCP) lets your agents or clients 
 ---
 
 import { CardGrid } from "@/components/card-grid";
-import { Card } from "@/components/card";
 import { mcpCards } from "@/lib/data/mcp";
-import { Callout } from "@/mdx/components";
-
-<Callout type="info" title="This content is Open Source, contribute here!" className="overflow-hidden">
-  <div className="mx-auto max-w-full">
-    <Card
-      variant="github-repo"
-      repoPath="speakeasy-api/developer-docs"
-      title="Developer Documentation"
-      description="The official repository for Speakeasy's developer documentation"
-      href="https://github.com/speakeasy-api/developer-docs/tree/main"
-      button={{
-        label: "View on GitHub",
-        href: "https://github.com/speakeasy-api/developer-docs/tree/main",
-        variant: "secondary",
-        newTab: true
-      }}
-      className="max-w-full"
-    />
-  </div>
-</Callout>
 
 # Model Context Protocol (MCP) Hub
 
@@ -37,12 +16,7 @@ Start with these foundational concepts to understand the core components of Mode
 
 <CardGrid
   cards={[
-    mcpCards[0], // What is MCP?
-    mcpCards[1], // MCP Tools
-    mcpCards[3], // MCP Prompts
-    mcpCards[2], // MCP Resources
-    mcpCards[4], // MCP Roots
-    mcpCards[5], // MCP Transports
+    ...mcpCards.slice(0, 5),
     {
       title: "MCP Sampling",
       description: "Techniques for effective sampling in MCP",
@@ -59,7 +33,6 @@ Learn how to build AI agents with MCP and see real-world examples of MCP in acti
 
 <CardGrid
   cards={[
-    mcpCards[6], // Building AI Agents
-    mcpCards[7], // Real-world MCP Example
+    ...mcpCards.slice(6, 8),
   ]}
 />
