chore: add import

--- a/openapi/schemas/strings.mdx
+++ b/openapi/schemas/strings.mdx
@@ -3,6 +3,8 @@ title: Strings
 description: Best practices for describing string types and their formats in OpenAPI
 ---
 
+import { Table } from "@/mdx/components";
+
 # strings
 
 The **string** type is one of the most used and most flexible primitive types in OpenAPI. It supports a number of formats, patterns and other validations that overlay constraints to the type of data represented. This is not just helpful for documentation and validation, but it can help with mapping to types in various languages when using OpenAPI for code generation.
