--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,21 +3,19 @@ title: Documentation
 description: "Read Speakeasy documentation for more information on our features and how to use them."
 ---
 
-import { CardGrid, Heading, Text } from "@/mdx/components";
+import { CardGrid, PageHeader } from "@/mdx/components";
 import { cards, intro } from "@/lib/data/docs/overview";
 import InkeepSearchBar from "@/lib/inkeep/search";
 
-    <div className="container space-y-8">
-      {intro?.title && (
-        <Heading as="h1" variant="xl" className="text-foreground mt-10">
-          {intro.title}
-        </Heading>
-      )}
-      {intro?.description && <Text className="mb-10">{intro.description}</Text>}
-      <div className="my-10">
+<div className="container space-y-8">
+  <PageHeader
+    title={intro?.title}
+    description={intro?.description}
+  />
+      <div className="flex justify-center py-12">
       <InkeepSearchBar />
-      <CardGrid cards={cards?.quickstart} columns={2} />
       </div>
+      <CardGrid cards={cards?.quickstart} columns={2} />
       <CardGrid cards={cards?.start}
       heading="Products" />
       <CardGrid columns={2} cards={cards?.learn} heading="Learn" />
