Fix busted tables

--- a/docs/sdk-docs.mdx
+++ b/docs/sdk-docs.mdx
@@ -304,25 +304,25 @@ The supported `tags` and their associated conditions are listed in this table:
       conditions: "One of the responses must be an error with custom content data."
     },
     {
-      section: "Server Selection",
+      section: "Client Server Selection",
       subsection: "Per-Client",
       tag: "server",
       conditions: "`servers` must **not** be set at the operation level."
     },
     {
-      section: "Server Selection",
+      section: "Operation Server Selection",
       subsection: "Per-Operation",
       tag: "server",
       conditions: "Operation must define its own `servers` array."
     },
     {
-      section: "Authentication",
+      section: "Client Authentication",
       subsection: "Per-Client",
       tag: "security",
       conditions: "`security` must **not** be set for the operation."
     },
     {
-      section: "Authentication",
+      section: "Operation Authentication",
       subsection: "Per-Operation",
       tag: "security",
       conditions: "Operation must define its own `security` array."
