fix: remove tf language marker

--- a/docs/terraform/property-customization.mdx
+++ b/docs/terraform/property-customization.mdx
@@ -4,10 +4,8 @@ description: |
   Learn how to customize property behavior and mapping in your Terraform provider.
 ---
 
-# TO DO
-Figure out why its failing to render
+import { Callout } from "@/mdx/components";
 
-{/* 
 # Customize Terraform Properties
 
 ## Remap API Property to Terraform Attribute Name
@@ -78,7 +76,7 @@ components:
         - name
 ```
 
-```tf
+```
 resource "petstore_pet" "mypet" {
   name = "myPet"
   # Attempting to set an ignored parameter results in an error  
@@ -116,7 +114,7 @@ components:
         - name
 ```
 
-```tf
+```
 resource "petstore_pet" "mypet" {
   name = "myPet"
   deep = jsonencode({
@@ -150,4 +148,4 @@ components:
 
 <Callout title="Warning" type="warning">
 Applying this modifier when `x-speakeasy-entity-operation: my_resource#read` is not defined may result in drift between the Terraform plan and remote state should updates to attributes happen outside of Terraform changes. Please only apply this when necessary.
-</Callout> */}
+</Callout>
