--- a/docs/terraform/entity-mapping.mdx
+++ b/docs/terraform/entity-mapping.mdx
@@ -4,10 +4,10 @@ description: |
   Learn how to map your API entities to Terraform resources and specify CRUD operations.
 ---
 
-# TO DO
-Figure out why its failing to render
+import { Callout } from "@/mdx/components";
 
-{/* #  Map API Entities to Terraform Resources
+
+#  Map API Entities to Terraform Resources
 
 Add the `x-speakeasy-entity` annotation to objects in your OpenAPI spec to include them as entities in the Terraform provider.
 
@@ -66,7 +66,7 @@ paths:
               type: object
 ```
 
-```tf
+ ```
 resource "yourprovider_order" "example" {
   name = "Filter Blend"
   price = 11.5
@@ -82,11 +82,11 @@ Where you place the `x-speakeasy-entity` annotation affects the Terraform provid
 ```yaml 
 Pet:
   x-speakeasy-entity: Pet
-  ...
+  #...
 ```
 
 
-```tf
+ ```
 resource "yourprovider_pet" "example" {
   data = { name = "Filter Blend" }
 }
@@ -98,11 +98,11 @@ Pet:
   properties:
     data:
       x-speakeasy-entity: Pet
-      ...
+      #...
 ```
 
 
-```tf
+```
 resource "yourprovider_pet" "example" {
   name = "Filter Blend"
 }
@@ -242,4 +242,4 @@ components:
           type: string
           format: date-time
           x-speakeasy-soft-delete-property: true
-``` */}
+```
