--- a/mcp/mcp-an-in-depth-introduction-and-walkthrough-guide.mdx
+++ b/mcp/mcp-an-in-depth-introduction-and-walkthrough-guide.mdx
@@ -1,5 +1,5 @@
-import { Callout } from "~/components"
-import { Steps } from "nextra/components"
+import { Callout } from "@/mdx/components";
+import { Steps } from "nextra/components";
 
 # MCP: an in-depth introduction
 
