chore: update typos

--- a/docs/sdk-docs.mdx
+++ b/docs/sdk-docs.mdx
@@ -289,7 +289,7 @@ The supported `tags` and their associated conditions are listed in this table:
       section: "Pagination",
       subsection: "",
       tag: "pagination",
-      conditions: "`x-speaskeasy-pagination` must be set for the operation."
+      conditions: "`x-speakeasy-pagination` must be set for the operation."
     },
     {
       section: "Retries",
