--- a/api-design/errors.mdx
+++ b/api-design/errors.mdx
@@ -123,7 +123,7 @@ HTTP/1.1 400 Bad Request
 {
   "error": {
     "code": "trip_too_short",
-    "message": "This trip does not meet the minium threshold for a carpool or 2 kilometers (1.24 miles)."
+    "message": "This trip does not meet the minimum threshold for a carpool or 2 kilometers (1.24 miles)."
   }
 }
 ```
